# AI-Agent-Testing

./: .editorconfig  .env.example  .git-blame-ignore-revs  .gitignore  README.md  agent_mcp.py  agent_stock_mcp.py  copilot_api_demo.py  github_models_demo.py  mcp_server_utils.py  premier_agent_ia.py  pyproject.toml  requirements.txt  test_coherence.py
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
.github/workflows/: ci.yml
docs/: index.html
src/: .env.local
src/agents/: agent_mcp.py  agent_stock_mcp.py  agent_strat_pred.py  agent_strat_test.py  copilot_proxy_utils.py  deuxieme_agent_ia.py  mcp_server_stock.py
src/agents/agents_demo/: agent_mcp.py  agent_stock_mcp.py  copilot_api_demo.py  copilot_proxy_utils.py  deuxieme_agent_ia.py  first_ai_agent.py  french_to_english_translation.py  github_models_demo.py  premier_agent_ia.py  second_ai_agent.py  traduction_fr_eng.py
src/mcp_servers/: mcp_server_strat_pred.py
src/mcp_servers/old_mcp_servers/: mcp_server_stock.py  mcp_server_utils.py
src/scripts/: generate_deepeval_dashboard.py  generate_report.py
src/tests/: .env.local  test_agent_answers.py  test_agent_client.py  test_agent_pred_prompt.py  test_coherence.py  test_tools.py
src/tests/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
src/tests/old_tests/: test_agent.py  test_agent_client.py  test_mcp.py  test_tools.py
src/tests/test_answers/: test_agent_answers.py  test_agent_pred_prompt.py  test_prompt.py
tests/: test_agent.py  test_agent_client.py  test_mcp.py  test_tools.py
(+7 files in other folders)
